--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
-        /* Garantir que o conteúdo não fique escondido atrás de barras de navegação mobile */
         #root { min-height: 100vh; display: flex; flex-direction: column; }
+        
+        @media print {
+            .no-print { display: none !important; }
+            .print-only { display: block !important; }
+            body { background: white !important; padding: 0 !important; margin: 0 !important; }
+            main { padding: 0 !important; margin: 0 !important; }
+            .shadow-sm, .shadow-md, .shadow-lg, .shadow-xl, .shadow-2xl { shadow: none !important; box-shadow: none !important; }
+            .rounded-3xl, .rounded-[2.5rem] { border-radius: 0 !important; }
+            table { border-collapse: collapse !important; width: 100% !important; }
+            th, td { border: 1px solid #e2e8f0 !important; }
+            @page { margin: 1.5cm; }
+        }
+        .print-only { display: none; }
     </style>
 <script type="importmap">
 {
@@ -26,7 +38,6 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-    <!-- O script abaixo é essencial para carregar sua aplicação -->
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
